<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/s_Login_title"
        android:textStyle="bold"
        android:textSize="50dp"
        />
    <EditText
        android:id="@+id/etUser"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/s_Login_user"
        android:padding="10dp"
        android:background="#FFFFFF"
        android:elevation="4dp"
        android:textColor="#000000"
        />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/s_Login_pass"
        android:inputType="textPassword"
        android:padding="10dp"
        android:background="#FFFFFF"
        android:elevation="4dp"
        android:textColor="#000000"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/s_Login_button"
        android:background="#6200EA"
        android:textColor="#FFFFFF"
        android:padding="12dp"
        android:textSize="18sp"
        android:elevation="6dp" />
</LinearLayout>